--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "oh-vue-icons": "^1.0.0-rc3",
+        "pinia": "^2.2.1",
+        "pinia-plugin-persistedstate": "^3.2.1",
         "sweetalert2": "^11.12.3",
         "vue": "^3.4.35",
         "vue-loader": "^17.4.2",
