--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-select": "^5.8.1",
     "react-toastify": "^10.0.5",
     "sweetalert2": "^11.14.1"
   },
