--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.4",
     "date-fns": "^4.1.0",
+    "docxtemplater": "^3.51.2",
     "fast-jwt": "^4.0.5",
     "hugeicons-react": "^0.3.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "next": "14.2.14",
     "next-auth": "^5.0.0-beta.22",
+    "pizzip": "^3.1.7",
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
