--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.5.3",
     "@types/bcryptjs": "^2.4.6",
+    "@types/file-saver": "^2.0.7",
     "@types/react-icons": "^2.2.7",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.4",
     "date-fns": "^4.1.0",
+    "docx": "^9.0.3",
     "docxtemplater": "^3.51.2",
     "fast-jwt": "^4.0.5",
+    "file-saver": "^2.0.5",
     "hugeicons-react": "^0.3.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
